--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,11 @@
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: "Roboto", sans-serif;
   width: 375px;
   height: 812px;
-  padding: 66px 0;
   margin: 0;
+}
+.splash-container {
+  padding: 66px 0;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
@@ -12,7 +14,7 @@ body {
 .splash__image {
   margin: 0 auto 62px 56px;
 }
-.splash__main-text {
+.splash__title {
   font-weight: 600;
   font-size: 34px;
   line-height: 44px;
@@ -20,15 +22,18 @@ body {
   color: #1a1d1e;
   margin: 0 0 5px 0;
 }
-.splash__text {
+.text {
   font-size: 16px;
   line-height: 26px;
-  text-align: center;
   color: #6a6a6a;
+}
+.splash__text {
+  text-align: center;
   margin: 0 0 40px 0;
 }
-.main-button {
-  width: 261px;
+.primary-button {
+  display: block;
+  width: 100%;
   height: 54px;
   background: #7167da;
   border: none;
@@ -37,7 +42,9 @@ body {
   text-align: center;
   color: #ffffff;
 }
-.splash__main-button {
+.splash__primary-button {
+  box-sizing: border-box;
+  width: 261px;
   font-size: 16px;
   line-height: 130%;
   display: flex;
@@ -48,4 +55,120 @@ body {
 .splash__arrow-image {
   margin-left: 30px;
   vertical-align: center;
+}
+
+.login {
+  padding: 100px 20px 108px;
+  background-color: #fbfbfb;
+}
+.title {
+  font-weight: 800;
+  font-size: 30px;
+  line-height: 30px;
+  color: #1a1d1e;
+}
+.login__title {
+  padding-left: 10px;
+}
+.login__text {
+  padding-left: 10px;
+  margin-bottom: 30px;
+}
+.input {
+  width: 335px;
+  height: 54px;
+  box-sizing: border-box;
+  background: #ffffff;
+  border-radius: 12px;
+  border: none;
+  background-repeat: no-repeat;
+  padding: 0;
+  background-position: 20px;
+  outline: none;
+  padding-left: 54px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 130%;
+  color: #6a6a6a;
+}
+.input:not(:last-child) {
+  margin-bottom: 24px;
+}
+.login__input:last-child {
+  margin-bottom: 10px;
+}
+.input__email {
+  background-image: url(/img/email.svg);
+}
+.input__password {
+  background-image: url(/img/password.svg);
+}
+.login__forgot-text {
+  font-size: 12px;
+  line-height: 12px;
+  color: #6a6a6a;
+  text-decoration: none;
+  display: block;
+  text-align: right;
+  margin-bottom: 40px;
+}
+.login__primary-button {
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 16px;
+  margin-bottom: 40px;
+}
+.login-with {
+  margin: 0 auto;
+  width: 204px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-bottom: 30px;
+}
+.login-with_text {
+  font-size: 16px;
+  line-height: 16px;
+  color: #6a6a6a;
+}
+.social-buttons {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 40px;
+}
+.social-button {
+  width: 60px;
+  height: 60px;
+  border-radius: 20px;
+  border: none;
+  cursor: pointer;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.social-button:not(:last-child) {
+  margin-right: 20px;
+}
+.social-buttons__google {
+  background-color: #e9f4ff;
+  background-image: url(/img/google.svg);
+}
+.social-buttons__facebook {
+  background-color: #4460a0;
+  background-image: url(/img/facebook.svg);
+}
+.login__create {
+  font-size: 16px;
+  line-height: 26px;
+  text-align: center;
+  color: #6a6a6a;
+}
+.login__create_text {
+  margin: 0;
+}
+.login__create_link {
+  font-weight: 700;
+  text-decoration: none;
+  color: #6a6a6a;
 }
