--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,7 @@ body {
   width: 16px;
   border: none;
   background-color: #fff;
-  background-image: url(/img/eye.svg);
+  background-image: url(../img/eye.svg);
   background-repeat: no-repeat;
   background-position: center;
   position: absolute;
@@ -171,11 +171,11 @@ body {
 }
 .social-buttons__google {
   background-color: #e9f4ff;
-  background-image: url(/img/google.svg);
+  background-image: url(../img/google.svg);
 }
 .social-buttons__facebook {
   background-color: #4460a0;
-  background-image: url(/img/facebook.svg);
+  background-image: url(../img/facebook.svg);
 }
 .login__create {
   font-size: 16px;
