--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,12 @@
 body {
   font-family: "Inter", sans-serif;
   font-style: normal;
-  width: 375px;
-  height: 812px;
   margin: 0;
 }
 .splash-page {
-  padding: 66px 0;
+  width: 375px;
+  height: 812px;
+  padding-top: 66px;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
@@ -52,12 +52,19 @@ body {
   width: 261px;
 }
 .login-page,
-.signup-page {
-  padding: 100px 20px 108px;
+.signup-page,
+.search-page {
+  box-sizing: border-box;
+  width: 375px;
+  height: 812px;
+  padding: 100px 20px 0 20px;
   background-color: #fbfbfb;
 }
 .signup-page {
   padding-bottom: 78px;
+}
+.search-page {
+  padding-top: 40px;
 }
 .title {
   font-weight: 800;
@@ -191,5 +198,152 @@ body {
 .login-question_link {
   font-weight: 700;
   text-decoration: none;
+  color: #6a6a6a;
+}
+.search-page_title {
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 30px;
+  text-align: center;
+  color: #1a1d1e;
+  margin: 0 0 30px;
+}
+.search-page_return-button {
+  position: absolute;
+  top: 45px;
+  left: 20px;
+}
+.search-panel_input {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+.search-panel_search-field {
+  box-sizing: border-box;
+  width: 266px;
+  height: 54px;
+  background: #ffffff;
+  border-radius: 15px;
+  border: none;
+  padding-left: 20px;
+  font-size: 16px;
+  line-height: 16px;
+  color: #282b2c;
+}
+.search-panel_filter-button {
+  width: 54px;
+  height: 54px;
+  background: #7167da;
+  border-radius: 15px;
+  border: none;
+  cursor: pointer;
+  background-image: url(../img/filters.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.search-panel_search-result {
+  font-size: 16px;
+  line-height: 19px;
+  color: #1a1d1e;
+  margin: 0 0 20px;
+}
+.choise-buttons {
+  max-width: 299px;
+  display: flex;
+  justify-content: space-between;
+  margin: 0 auto 20px;
+}
+.choise-buttons_button {
+  width: 140px;
+  height: 36px;
+  background: #fafafa;
+  border-radius: 12px;
+  border: none;
+  cursor: pointer;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 14px;
+  color: #6a6a6a;
+}
+.choise-buttons_button_active {
+  background: #9990f9;
+  color: #ffffff;
+  font-weight: 600;
+}
+.search-item {
+  width: 335px;
+  height: 100px;
+  background: #ffffff;
+  box-shadow: 0px 10px 35px -10px rgba(64, 59, 75, 0.1);
+  border-radius: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  box-sizing: border-box;
+  padding: 0 12px 0 20px;
+  cursor: pointer;
+}
+.search-item:not(:last-of-type) {
+  margin-bottom: 20px;
+}
+.search-item_image_facebook {
+  background: #4460a0;
+  background-image: url(../img/facebook.svg);
+}
+.search-item_image_dribbble {
+  background: #ffd4e5;
+  background-image: url(../img/dribbble.svg);
+}
+.search-item_image_google {
+  background: #e9f4ff;
+  background-image: url(../img/google.svg);
+}
+.search-item_image {
+  width: 50px;
+  height: 50px;
+  border-radius: 15px;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.search-item_info {
+  height: 36px;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  margin: 0 auto 0 20px;
+}
+.search-item_author {
+  font-size: 12px;
+  line-height: 12px;
+  color: #6a6a6a;
+}
+.search-item_name {
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 16px;
+  color: #1a1d1e;
+}
+.search-item_column {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
+  height: 67px;
+}
+.search-item_fav-button {
+  width: 28px;
+  height: 28px;
+  border-radius: 50%;
+  border: none;
+  background-color: #fafafa;
+  background-image: url(../img/fav.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  cursor: pointer;
+}
+.search-item_date {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 12px;
   color: #6a6a6a;
 }
