--- a/css/style.css
+++ b/css/style.css
@@ -378,7 +378,7 @@ body {
   color: #6a6a6a;
 }
 .tabbar {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   left: 0;
   width: 375px;
@@ -591,6 +591,10 @@ body {
   left: 24px;
   top: 50%;
   transform: translate(0, -50%);
+}
+.radio-button_active {
+  background: #7167da;
+  box-shadow: 0px 0px 28px -5px #7167da;
 }
 .button-group button:not(:last-child) {
   margin-bottom: 16px;
