--- a/css/style.css
+++ b/css/style.css
@@ -97,6 +97,11 @@ body {
   padding-top: 40px;
   padding-bottom: 135px;
 }
+.map-page {
+  position: relative;
+  padding-top: 60px;
+  padding-bottom: 80px;
+}
 .title {
   font-weight: 800;
   font-size: 30px;
@@ -423,7 +428,6 @@ body {
 .tabbar_item_active {
   fill: #7167da;
 }
-
 .blackout-on {
   opacity: 1;
   transform: scale(1);
@@ -653,4 +657,263 @@ body {
 }
 .button-group button:not(:last-child) {
   margin-bottom: 16px;
+}
+
+.map-page_title,
+.map-page_text {
+  margin: 0 0 25px;
+  padding-left: 10px;
+}
+.map-panel {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.map-panel_hierarchy {
+  position: absolute;
+  left: 34px;
+  top: 258px;
+  opacity: 0.2;
+}
+.map-panel-element1 {
+  margin-bottom: 5px;
+}
+.map-page_primary-button {
+  margin-bottom: 15px;
+  box-shadow: 0px 10px 35px -10px rgba(0, 0, 0, 0.1);
+}
+.map_search-button {
+  position: absolute;
+  top: 51px;
+  right: 20px;
+  cursor: pointer;
+}
+.map-area_main {
+  height: 68px;
+  width: 335px;
+  border-radius: 20px;
+  background: linear-gradient(
+    99.18deg,
+    #ffffff 110.01%,
+    rgba(255, 255, 255, 0.859723) 127.71%,
+    rgba(255, 255, 255, 0) 151.15%
+  );
+  border: 2px solid #9990f9;
+  box-sizing: border-box;
+  box-shadow: 0px 10px 35px -10px rgba(0, 0, 0, 0.1);
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10px;
+  align-items: center;
+  padding: 24px;
+  cursor: pointer;
+}
+.map-area_name {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 20px;
+  color: #000000;
+}
+.map-area_second {
+  display: flex;
+  justify-content: space-between;
+  width: 300px;
+  border-radius: 20px;
+  background: linear-gradient(
+    99.18deg,
+    #ffffff 110.01%,
+    rgba(255, 255, 255, 0.859723) 127.71%,
+    rgba(255, 255, 255, 0) 151.15%
+  );
+  box-sizing: border-box;
+  box-shadow: 0px 10px 35px -10px rgba(0, 0, 0, 0.1);
+  margin: 15px 0 15px auto;
+  padding: 24px;
+  cursor: pointer;
+}
+
+.map-area__info_name {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 16px;
+  margin: 0 0 16px 0;
+}
+
+.map-area__info_text {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 16px;
+  color: #6a6a6a;
+  margin: 0;
+  padding: 0;
+}
+
+.map-area_arrow {
+  height: 12px;
+  width: 21px;
+  border: none;
+  background: white;
+  cursor: pointer;
+  background-image: url(../img/arrow.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.map-area_arrow_small {
+  height: 12px;
+  width: 21px;
+  border: none;
+  background: white;
+  cursor: pointer;
+  background-image: url(../img/arrow_small.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.map-results {
+  height: 200px;
+  max-width: 375px;
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 20px;
+  padding-left: 20px;
+  overflow-x: scroll;
+}
+
+.map-results_element1 {
+  width: 170px;
+  height: 170px;
+  border-radius: 20px;
+  background: #ddffe9;
+  padding: 15px 20px;
+  margin-right: 15px;
+  cursor: pointer;
+}
+
+.map-results_element2 {
+  width: 170px;
+  height: 170px;
+  border-radius: 20px;
+  background: white;
+  padding: 15px 20px;
+  margin-right: 15px;
+  box-shadow: 0px 10px 35px -10px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+}
+
+.map-results_element3 {
+  width: 170px;
+  height: 170px;
+  border-radius: 20px;
+  background: #fff599;
+  padding: 15px 20px;
+  margin-right: 15px;
+  cursor: pointer;
+}
+
+.map-results_main {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10px;
+  align-items: center;
+}
+
+.map-results_percent_full {
+  width: 160px;
+  height: 35px;
+  background: #0eb990;
+  border-radius: 15px;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.map-results_percent_empty {
+  width: 160px;
+  height: 35px;
+  border-radius: 15px;
+  color: #6a6a6a;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #7167da;
+}
+
+.map-results_percent_half {
+  height: 35px;
+  width: 160px;
+  border: none;
+  cursor: pointer;
+  background-image: url(../img/half.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.map-results_heading {
+  height: 68px;
+  width: 335px;
+  background: #7167da;
+  border-radius: 12px;
+  box-sizing: border-box;
+  box-shadow: 0px 10px 35px -10px rgba(0, 0, 0, 0.1);
+  display: flex;
+  justify-content: center;
+  margin-bottom: 10px;
+  align-items: center;
+  padding: 24px;
+}
+
+.recommendation-block {
+  background: linear-gradient(307.43deg, #b8e4ff -36.62%, #c9bcfe 132.73%);
+  padding: 20px;
+  border-radius: 20px;
+  padding-right: 0;
+}
+
+.recommendation-block_heading {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 24px;
+  margin: 0;
+  padding: 0;
+  color: #30363e;
+  margin-bottom: 5px;
+}
+
+.recommendation-block_text {
+  font-weight: 400;
+  font-size: 16px;
+  color: #30363e;
+  margin: 0;
+  padding: 0;
+  margin-bottom: 15px;
+}
+
+.recommendation-block_panel_wrapper {
+  max-width: 325px;
+  overflow-y: scroll;
+}
+
+.recommendation-block_panel {
+  width: 700px;
+  display: flex;
+  flex-direction: row;
+}
+
+.recommendation-block_panel_element1 {
+  width: 250px;
+  height: 80px;
+  border-radius: 15px;
+  background: white;
+  padding: 10px 15px;
+  margin-right: 15px;
+}
+
+.recommendation-block_panel_name {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
 }
