--- a/css/style.css
+++ b/css/style.css
@@ -97,6 +97,11 @@ body {
   padding-top: 40px;
   padding-bottom: 135px;
 }
+.tests-page {
+  position: relative;
+  padding-top: 40px;
+  padding-bottom: 80px;
+}
 .map-page {
   position: relative;
   padding-top: 60px;
@@ -571,13 +576,17 @@ body {
   color: #6a6a6a;
   cursor: pointer;
 }
-.test-page_title {
+.test-page_title,
+.tests-page_title {
   font-weight: 600;
   font-size: 20px;
   line-height: 24px;
   color: #1a1d1e;
   text-align: center;
   margin: 0 0 46px;
+}
+.tests-page_title {
+  margin-bottom: 40px;
 }
 .questions-list-button {
   position: absolute;
@@ -867,103 +876,104 @@ body {
 }
 .recommendation-block {
   background: linear-gradient(307.43deg, #b8e4ff -36.62%, #c9bcfe 132.73%);
-  padding: 20px;
+  padding: 20px 0;
   border-radius: 20px;
-  padding-right: 0;
-  margin-bottom: 15px;
+  margin-bottom: 20px;
 }
-
+.recomendation-block_header {
+  padding: 0 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 16px;
+}
+.recommendation-block_arrow {
+  cursor: pointer;
+}
 .recommendation-block_heading {
-  font-style: normal;
   font-weight: bold;
   font-size: 24px;
-  margin: 0;
-  padding: 0;
+  line-height: 130%;
   color: #30363e;
-  margin-bottom: 5px;
+  margin: 0 0 5px;
 }
-
 .recommendation-block_text {
-  font-weight: 400;
-  font-size: 16px;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 130%;
   color: #30363e;
   margin: 0;
-  padding: 0;
-  margin-bottom: 15px;
 }
-
 .recommendation-block_panel_wrapper {
-  max-width: 325px;
   overflow-y: scroll;
 }
-
 .recommendation-block_panel {
   width: 700px;
   display: flex;
   flex-direction: row;
 }
-
 .recommendation-block_panel_element1 {
-  width: 250px;
-  height: 80px;
+  box-sizing: border-box;
+  width: 220px;
+  height: 100px;
   border-radius: 15px;
   background: white;
-  padding: 10px 15px;
+  padding: 24px;
   margin-left: 15px;
+  display: flex;
+  justify-content: space-between;
+  cursor: pointer;
 }
-
 .recommendation-block_panel_element1:first-child {
-  margin-left: 0px;
+  margin-left: 20px;
 }
-
+.recommendation-block_panel_element1:last-child {
+  margin-right: 20px;
+}
 .recommendation-block_panel_name {
-  font-style: normal;
   font-weight: 600;
   font-size: 16px;
-  margin: 10px 0;
-  margin-left: 15px;
+  line-height: 16px;
+  margin: 0 0 16px;
 }
-
 .recommendation_text {
+  font-size: 16px;
+  line-height: 130%;
+  color: #6a6a6a;
   margin: 0;
-  margin-left: 15px;
 }
-
 .menu-points-button {
   width: 28px;
   height: 28px;
   border-radius: 50%;
   border: none;
-  background-color: #fafafa;
+  background-color: transparent;
   background-image: url(../img/points.svg);
   background-repeat: no-repeat;
   background-position: center;
   cursor: pointer;
 }
-
 .test-item {
   background: #ffffff;
   box-shadow: 0px 10px 35px -10px rgba(64, 59, 75, 0.1);
   border-radius: 20px;
-  padding: 10px 20px;
+  padding: 25px;
   margin-bottom: 15px;
 }
-
 .test-item_wrapper {
   display: flex;
   justify-content: space-between;
   align-items: center;
   box-sizing: border-box;
   cursor: pointer;
+  margin-bottom: 25px;
 }
-
 .label_success {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
 }
-
 .label_success_text {
   width: 135px;
   height: 25px;
@@ -977,28 +987,23 @@ body {
   justify-content: center;
   align-items: center;
 }
-
 .label_success_progress {
   color: #0eb990;
   font-weight: 600;
   font-size: 16px;
 }
-
 .test-item_column {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   flex-direction: column;
-  align-items: center;
-  height: 75px;
+  height: 50px;
 }
-
 .label_fail {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
 }
-
 .label_fail_text {
   width: 135px;
   height: 25px;
@@ -1012,7 +1017,6 @@ body {
   justify-content: center;
   align-items: center;
 }
-
 .label_fail_progress {
   color: #ea4c89;
   font-weight: 600;
