Clean code, edit title in index.html

--- a/css/style.css
+++ b/css/style.css
@@ -761,7 +761,6 @@ body {
   padding: 24px;
   cursor: pointer;
 }
-
 .map-area__info_name {
   font-style: normal;
   font-weight: 600;
@@ -769,7 +768,6 @@ body {
   line-height: 16px;
   margin: 0 0 16px 0;
 }
-
 .map-area__info_text {
   font-style: normal;
   font-weight: 500;
@@ -779,7 +777,6 @@ body {
   margin: 0;
   padding: 0;
 }
-
 .map-area_arrow {
   height: 12px;
   width: 21px;
@@ -790,7 +787,6 @@ body {
   background-repeat: no-repeat;
   background-position: center;
 }
-
 .map-area_arrow_small {
   height: 12px;
   width: 21px;
@@ -801,7 +797,6 @@ body {
   background-repeat: no-repeat;
   background-position: center;
 }
-
 .map-results {
   height: 200px;
   max-width: 375px;
@@ -812,7 +807,6 @@ body {
   overflow-x: scroll;
   z-index: 1;
 }
-
 .map-results_element1 {
   width: 170px;
   height: 170px;
@@ -822,7 +816,6 @@ body {
   margin-right: 15px;
   cursor: pointer;
 }
-
 .map-results_element2 {
   width: 170px;
   height: 170px;
@@ -833,7 +826,6 @@ body {
   box-shadow: 0px 10px 35px -10px rgba(0, 0, 0, 0.1);
   cursor: pointer;
 }
-
 .map-results_element3 {
   width: 170px;
   height: 170px;
@@ -843,14 +835,12 @@ body {
   margin-right: 15px;
   cursor: pointer;
 }
-
 .map-results_main {
   display: flex;
   justify-content: space-between;
   margin-bottom: 10px;
   align-items: center;
 }
-
 .map-results_percent_full {
   width: 160px;
   height: 35px;
@@ -861,7 +851,6 @@ body {
   justify-content: center;
   align-items: center;
 }
-
 .map-results_percent_empty {
   width: 160px;
   height: 35px;
@@ -872,7 +861,6 @@ body {
   align-items: center;
   border: 1px solid #7167da;
 }
-
 .map-results_percent_half {
   height: 35px;
   width: 160px;
@@ -882,7 +870,6 @@ body {
   background-repeat: no-repeat;
   background-position: center;
 }
-
 .map-results_heading {
   height: 68px;
   width: 335px;
@@ -1051,12 +1038,10 @@ body {
   font-weight: 600;
   font-size: 16px;
 }
-
 .statistics-panel1 {
   display: flex;
   flex-direction: row;
 }
-
 .statistics-panel_block1_progress {
   max-width: 168px;
   height: 100px;
@@ -1066,19 +1051,16 @@ body {
   padding: 26px 16px;
   margin-bottom: 10px;
 }
-
 .statistics-panel_block1_progress1 {
   display: flex;
   justify-content: space-between;
 }
-
 .statistics-panel_block1_progress2 {
   height: 130px;
   background-image: url(../img/progress.svg);
   background-repeat: no-repeat;
   background-position: center;
 }
-
 .statistics-panel_block2 {
   background: #ffffff;
   box-shadow: 0px 10px 35px -10px rgba(0, 0, 0, 0.1);
@@ -1086,7 +1068,6 @@ body {
   padding: 26px 16px 0px 16px;
   margin-left: 16px;
 }
-
 .statistics-panel_block1_tasks {
   max-width: 168px;
   background: #ffffff;
@@ -1094,7 +1075,6 @@ body {
   border-radius: 20px;
   padding: 16px 16px;
 }
-
 .statistics-area__info_text {
   font-style: normal;
   font-weight: 400;
@@ -1105,7 +1085,6 @@ body {
   padding: 0;
   margin-bottom: 25px;
 }
-
 .statistics-block_panel_prod {
   height: 25px;
   background: #ffffff;
@@ -1119,19 +1098,16 @@ body {
   padding: 20px;
   cursor: pointer;
 }
-
 .statistics-panel_wrapper {
   margin-left: 25px;
   margin-right: 25px;
 }
-
 .statistics-block_panel_name {
   font-weight: 600;
   font-size: 16px;
   line-height: 16px;
   margin: 0;
 }
-
 .week-progress_image {
   height: 110px;
   width: 110px;
@@ -1139,7 +1115,6 @@ body {
   background-repeat: no-repeat;
   background-position: center;
 }
-
 .week-progress_text {
   width: 200px;
   display: flex;
@@ -1147,14 +1122,12 @@ body {
   align-items: flex-start;
   margin-left: 10px;
 }
-
 .circle {
   width: 15px;
   height: 10px;
   border-radius: 6px;
   margin-right: 9px;
 }
-
 .progress-item {
   display: flex;
   flex-direction: row;
@@ -1162,7 +1135,6 @@ body {
   align-items: center;
   margin-top: 5px;
 }
-
 .statistics-panel3 {
   max-width: 335px;
   display: flex;
@@ -1170,7 +1142,6 @@ body {
   margin-bottom: 20px;
   align-items: center;
 }
-
 .sort-tests_image {
   height: 50px;
   width: 50px;
@@ -1179,14 +1150,12 @@ body {
   background-position: center;
   margin-top: -10px;
 }
-
 .completed-tests_heading_wrapper {
   display: flex;
   align-items: top;
   margin-bottom: 40px;
   justify-content: space-between;
 }
-
 .check-icon {
   height: 50px;
   width: 50px;
@@ -1194,7 +1163,6 @@ body {
   background-repeat: no-repeat;
   background-position: center;
 }
-
 .time-icon {
   height: 50px;
   width: 50px;
@@ -1202,20 +1170,17 @@ body {
   background-repeat: no-repeat;
   background-position: center;
 }
-
 .prod-statistics-panel_block1_progress1 {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-
 .prod-numbers {
   margin-top: 20px;
   font-style: normal;
   font-weight: 600;
   font-size: 32px;
 }
-
 .tabs {
   height: 40px;
   margin-top: 44px;
@@ -1223,7 +1188,6 @@ body {
   background-repeat: no-repeat;
   background-position: center;
 }
-
 .chart {
   height: 340px;
   margin-top: 28px;
@@ -1231,7 +1195,6 @@ body {
   background-repeat: no-repeat;
   background-position: center;
 }
-
 .tabs2 {
   height: 50px;
   width: 760px;
@@ -1239,13 +1202,11 @@ body {
   background-repeat: no-repeat;
   background-position: left;
 }
-
 .tabs2_wrapper {
   height: 50px;
-  overflow-y: scroll;
+  overflow-y: hidden;
   margin-left: 25px;
 }
-
 .statistics-panel3_wrappper {
   max-width: 335px;
   margin-top: 24px;
@@ -1254,14 +1215,12 @@ body {
   border-radius: 20px;
   padding: 15px;
 }
-
 .tabs3_wrapper {
   height: 140px;
   display: flex;
   margin-left: 25px;
   margin-top: 25px;
 }
-
 .stata {
   height: 170px;
   width: 750px;
@@ -1269,7 +1228,6 @@ body {
   background-repeat: no-repeat;
   background-position: left;
 }
-
 .progress_wrapper {
   width: 160px;
   height: 130px;
@@ -1278,14 +1236,12 @@ body {
   border-radius: 20px;
   margin-right: 10px;
 }
-
 .text-wrapper {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-
 .stata-heading {
   padding: 24px 0 10px 0;
   font-style: normal;
@@ -1293,7 +1249,6 @@ body {
   font-size: 20px;
   margin: 0;
 }
-
 .stata-number {
   font-style: normal;
   font-weight: bold;
@@ -1302,7 +1257,6 @@ body {
   color: #9990f9;
   margin: 0;
 }
-
 .stata-text {
   font-weight: normal;
   font-size: 14px;
@@ -1318,14 +1272,12 @@ body {
   color: #6a6a6a;
   margin: 0;
 }
-
 .top-wrapper {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding-right: 25px;
 }
-
 .font-grey {
   font-weight: normal;
   font-size: 20px;
@@ -1335,7 +1287,6 @@ body {
   display: inline;
   width: 3px;
 }
-
 .font-grey2 {
   font-weight: normal;
   font-size: 20px;
