--- a/css/style.css
+++ b/css/style.css
@@ -1041,15 +1041,17 @@ body {
 .statistics-panel1 {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
 }
 .statistics-panel_block1_progress {
   max-width: 168px;
-  height: 100px;
   background: #ffffff;
   box-shadow: 0px 10px 35px -10px rgba(0, 0, 0, 0.1);
   border-radius: 20px;
-  padding: 26px 16px;
-  margin-bottom: 10px;
+  padding: 16px 16px 24px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 .statistics-panel_block1_progress1 {
   display: flex;
@@ -1157,14 +1159,14 @@ body {
   justify-content: space-between;
 }
 .check-icon {
-  height: 50px;
+  height: 35px;
   width: 50px;
   background-image: url(../img/check.svg);
   background-repeat: no-repeat;
   background-position: center;
 }
 .time-icon {
-  height: 50px;
+  height: 35px;
   width: 50px;
   background-image: url(../img/time.svg);
   background-repeat: no-repeat;
