--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,7 @@ body {
 .container {
   box-sizing: border-box;
   width: 375px;
-  /*min-height: 812px;*/
+  min-height: 812px;
   padding: 100px 20px 0 20px;
   background-color: #fbfbfb;
 }
@@ -1245,7 +1245,7 @@ body {
   align-items: center;
 }
 .stata-heading {
-  padding: 24px 0 10px 0;
+  padding: 18px 0 4px 0;
   font-style: normal;
   font-weight: bold;
   font-size: 20px;
@@ -1258,6 +1258,7 @@ body {
   /* identical to box height */
   color: #9990f9;
   margin: 0;
+  padding-bottom: 2px;
 }
 .stata-text {
   font-weight: normal;
